--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,13 @@ project(SourceVolumeRenderer
   LANGUAGES CXX CUDA
 )
 
+find_package(tinyxml2 CONFIG REQUIRED)
+find_package(unofficial-cfitsio CONFIG REQUIRED)
 find_package(glfw3 CONFIG REQUIRED)
+
 set(owl_dir ${PROJECT_SOURCE_DIR}/thirdParty/owl)
 OPTION(OWL_BUILD_SAMPLES OFF)
 add_subdirectory(${owl_dir} EXCLUDE_FROM_ALL)
 add_subdirectory(${owl_dir}/samples/common)
 
-
-add_subdirectory(simpleSourceRenderer)
-# find_package(CUDAToolkit)
+add_subdirectory(owl_programs)
