--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ project(SourceVolumeRenderer
 find_package(tinyxml2 CONFIG REQUIRED)
 find_package(unofficial-cfitsio CONFIG REQUIRED)
 find_package(glfw3 CONFIG REQUIRED)
+find_package(TBB CONFIG REQUIRED)
 
 set(owl_dir ${PROJECT_SOURCE_DIR}/thirdParty/owl)
 OPTION(OWL_BUILD_SAMPLES OFF)
@@ -15,3 +16,4 @@ add_subdirectory(${owl_dir} EXCLUDE_FROM_ALL)
 add_subdirectory(${owl_dir}/samples/common)
 
 add_subdirectory(owl_programs)
+add_subdirectory(utils)
