Add an initial project for nanoVDB experiments.

--- a/owl_programs/CMakeLists.txt
+++ b/owl_programs/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_subdirectory(simpleSourceRenderer)
 add_subdirectory(surfaceTest)
 add_subdirectory(cubeTest)
+add_subdirectory(nanoVDBRenderer)
