fixed library name mismatch in utils + new error

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,8 +1,8 @@
 find_package(imgui CONFIG REQUIRED)
 
 add_library(utils NanoViewer.h NanoViewer.cpp)
-target_include_directories(utils PUBLIC ./)
-target_link_libraries(nanoVDBRenderer
+target_include_directories(utils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(utils
   PUBLIC
     owl::owl
     owl_viewer
